# candle-ai

./: .gitignore  README.md  mnist_model.pth  mnist_model.safetensors  mnist_model_best.safetensors  mnist_model_final.safetensors  requirements.txt
python/: app.py  conv_net.py  darknet53.py  predict.py  predict_mnist.py  requirements.txt  test.py  train.py  train_mnist.py  viewer.py
python/code/: code_net.py  generate.py  loader.py  predict_code.py  train_code.py
python/templates/: index.html
python/yolo-v8/: predict.py
python/yolov8/: __init__.py  example.py  hyp.yaml  model.py  predict.py  train.py  utils.py
python/yolov8/models/: __init__.py  common.py  yolo.py  yolov8.yaml
python/yolov8/utils/: __init__.py  datasets.py  general.py  loss.py  metrics.py
rust/: Cargo.toml  best_model.safetensors
rust/rust_wasm_example/: Cargo.toml  app.js  build-lib.sh  index.html
rust/rust_wasm_example/src/: lib.rs
rust/rust_wasm_mnist/: Cargo.toml  app.js
rust/rust_wasm_mnist/src/: lib.rs
rust/shared/: Cargo.toml
rust/shared/src/: code_model.rs  lib.rs  model.rs  number_model.rs
rust/src/: predict.rs  predictcode.rs  train.rs  train_mnist.rs
rust/src/yolo-v8/: main.rs  model.rs
