workspace = { members = ["rust_wasm_example"] }
[package]
name = "candle-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "predict"
path = "src/predict.rs"

[[bin]]
name = "predictcode"
path = "src/predictcode.rs"

[dependencies]
candle-core = "0.6"
candle-nn  = "0.6"
candle-datasets = "0.6"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
anyhow = { version = "1", features = ["backtrace"] }
ureq = { version = "2", features = ["proxy-from-env"] }
image ={ version = "*"}
tract-core = "0.21"
tract-onnx = "0.21"
ndarray = "0.15" 
shared = { path = "./shared" }