workspace = { members = ["rust_wasm_example"] }
[package]
name = "candle-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "predict"
path = "src/predict.rs"

[[bin]]
name = "predictcode"
path = "src/predictcode.rs"

[[bin]]
name = "yolo"
path = "src/yolo-v8/main.rs"

[dependencies]
candle-core = "0.7"
candle-nn  = "0.7"
candle-datasets = "0.7"
candle-transformers = "0.7"
candle-onnx = "0.7"
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8"
anyhow = { version = "1.0.92", features = ["backtrace"] }
ureq = { version = "2.10.1", features = ["proxy-from-env"] }
image ={ version = "0.25.4"}
tract-core = "0.21.7"
tract-onnx = "0.21.7"
ndarray = "0.16" 
shared = { path = "./shared" }
ab_glyph = "0.2.23"
imageproc = { version = "0.25", default-features = false }
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
hf-hub = {path = "../../hf-hub"}