workspace = { members = ["rust_wasm_mnist"] }
[package]
name = "candle-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[[bin]]
name = "train"
path = "src/train_mnist.rs"

[[bin]]
name = "predict"
path = "src/predict_mnist.rs"


[[bin]]
name = "yolo"
path = "src/yolo-v8/main.rs"

[dependencies]
candle-core = { version = "0.8", features = ["cuda"] }
candle-nn = { version = "0.8", features = ["cuda"] }
candle-datasets = { version = "0.8"}
candle-transformers = { version = "0.8"}
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
anyhow = { version = "1.0", features = ["backtrace"] }
ureq = { version = "2.12", features = ["proxy-from-env"] }
image ={ version = "0.25"}
tract-core = "0.21"
tract-onnx = "0.21"
ndarray = "0.16" 
shared = { path = "./shared" }
ab_glyph = "0.2.23"
imageproc = { version = "0.25", default-features = false }
tracing = "0.1"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3"
hf-hub = "0.4"
# cudarc = { version = "0.12.1", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
