[package]
name = "rust_wasm_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
candle-core = "0.8"
candle-nn = "0.8"
image = "0.25"
shared = { path = "../shared" }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Performance", "Window"] }